--- a/public/wp-content/themes/blackrock/scss/modules/_card_carousel.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_card_carousel.scss
@@ -22,6 +22,44 @@
         padding: 0 10px;
     }
 
+    .mobile-swipe-prompt {
+        display: block;
+        position: absolute;
+        width: 200px;
+        height: 60px;
+        background-color: rgba($br-grey, 0.9);
+        border-radius: 60px;
+        pointer-events: none;
+        z-index: 1;
+        @include body-20;
+        line-height: 60px;
+        padding-left: 35px;
+        color: $br-white;
+        opacity: 1;
+        transition: opacity 0.3s ease 0s;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+        svg {
+            width: 30px;
+            height: auto;
+            position: absolute;
+            right: 50px;
+            top: 23px;
+
+            animation-name: pulseSlide;
+            animation-duration: 0.6s;
+            animation-delay: 0s;
+            animation-direction: alternate;
+            animation-iteration-count: infinite;
+        }
+    }
+
+    .mobile-touched .mobile-swipe-prompt {
+        opacity: 0;
+    }
+
     .swiper-pagination-bullets {
         height: 3px;
         width: calc(100% - 80px);
