--- a/public/wp-content/themes/blackrock/css/style.css
+++ b/public/wp-content/themes/blackrock/css/style.css
@@ -718,8 +718,21 @@ a.button:hover svg {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-size: 200% 100%;
 }
-/* line 10, ../scss/modules/_error404.scss */
+@media (min-width: 600px) {
+  /* line 1, ../scss/modules/_error404.scss */
+  .error-404 {
+    background-size: 150% 100%;
+  }
+}
+@media (min-width: 1024px) {
+  /* line 1, ../scss/modules/_error404.scss */
+  .error-404 {
+    background-size: 100% 100%;
+  }
+}
+/* line 20, ../scss/modules/_error404.scss */
 .error-404 h2 {
   font-weight: normal;
   font-size: 30px;
@@ -729,11 +742,11 @@ a.button:hover svg {
   font-family: "PPNeueMontreal-Medium";
   text-align: center;
 }
-/* line 15, ../scss/modules/_error404.scss */
+/* line 25, ../scss/modules/_error404.scss */
 .error-404 a {
   margin-top: 40px;
 }
-/* line 19, ../scss/modules/_error404.scss */
+/* line 29, ../scss/modules/_error404.scss */
 .error-404 .inner {
   text-align: center;
 }
@@ -1484,11 +1497,18 @@ a.button:hover svg {
 @media (min-width: 768px) {
   /* line 14, ../scss/modules/_contact.scss */
   .contact-module-container .contacts-container {
+    grid-template-columns: 1fr;
+    grid-template-areas: "contacts" "img";
+  }
+}
+@media (min-width: 1024px) {
+  /* line 14, ../scss/modules/_contact.scss */
+  .contact-module-container .contacts-container {
     grid-template-columns: 6fr 1fr 5fr;
     grid-template-areas: "contacts . img ";
   }
 }
-/* line 22, ../scss/modules/_contact.scss */
+/* line 27, ../scss/modules/_contact.scss */
 .contact-module-container .contacts-container .left {
   align-content: space-evenly;
   grid-area: contacts;
@@ -1496,21 +1516,21 @@ a.button:hover svg {
   padding-top: calc(100vw / 12);
 }
 @media (min-width: 768px) {
-  /* line 22, ../scss/modules/_contact.scss */
+  /* line 27, ../scss/modules/_contact.scss */
   .contact-module-container .contacts-container .left {
     display: grid;
     margin: 0 40px;
     column-gap: 20px;
   }
 }
-/* line 29, ../scss/modules/_contact.scss */
+/* line 34, ../scss/modules/_contact.scss */
 .contact-module-container .contacts-container .left .copy {
   display: block;
   height: auto;
   padding: 0;
   margin: 0;
 }
-/* line 36, ../scss/modules/_contact.scss */
+/* line 41, ../scss/modules/_contact.scss */
 .contact-module-container .contacts-container .left .copy h2 {
   font-weight: normal;
   font-size: 30px;
@@ -1525,7 +1545,7 @@ a.button:hover svg {
   margin-top: 0;
 }
 @media (min-width: 768px) {
-  /* line 36, ../scss/modules/_contact.scss */
+  /* line 41, ../scss/modules/_contact.scss */
   .contact-module-container .contacts-container .left .copy h2 {
     font-weight: normal;
     font-size: 50px;
@@ -1536,14 +1556,14 @@ a.button:hover svg {
     margin-left: 0;
   }
 }
-/* line 50, ../scss/modules/_contact.scss */
+/* line 55, ../scss/modules/_contact.scss */
 .contact-module-container .contacts-container .left .copy img {
   width: 100px;
   margin-left: 20px;
   margin-bottom: 20px;
 }
 @media (min-width: 768px) {
-  /* line 50, ../scss/modules/_contact.scss */
+  /* line 55, ../scss/modules/_contact.scss */
   .contact-module-container .contacts-container .left .copy img {
     width: auto;
     margin-left: 0;
@@ -1552,7 +1572,7 @@ a.button:hover svg {
   }
 }
 @media (min-width: 768px) {
-  /* line 65, ../scss/modules/_contact.scss */
+  /* line 70, ../scss/modules/_contact.scss */
   .contact-module-container .contacts-container .contacts {
     display: grid;
     margin: 0 40px;
@@ -1560,14 +1580,14 @@ a.button:hover svg {
   }
 }
 @media (min-width: 768px) {
-  /* line 65, ../scss/modules/_contact.scss */
+  /* line 70, ../scss/modules/_contact.scss */
   .contact-module-container .contacts-container .contacts {
     padding: 0 !important;
     margin: 0 !important;
     grid-template-columns: repeat(3, 1fr);
   }
 }
-/* line 75, ../scss/modules/_contact.scss */
+/* line 80, ../scss/modules/_contact.scss */
 .contact-module-container .contacts-container .contacts .contact {
   margin: 20px;
   border-top: 2px solid white;
@@ -1579,12 +1599,12 @@ a.button:hover svg {
   color: #FFFFFF;
 }
 @media (min-width: 768px) {
-  /* line 75, ../scss/modules/_contact.scss */
+  /* line 80, ../scss/modules/_contact.scss */
   .contact-module-container .contacts-container .contacts .contact {
     margin: 0;
   }
 }
-/* line 85, ../scss/modules/_contact.scss */
+/* line 90, ../scss/modules/_contact.scss */
 .contact-module-container .contacts-container .contacts .contact h3,
 .contact-module-container .contacts-container .contacts .contact h4 {
   font-size: 20px;
@@ -1593,63 +1613,63 @@ a.button:hover svg {
   padding-bottom: 0;
   font-family: "PPNeueMontreal-Regular";
 }
-/* line 90, ../scss/modules/_contact.scss */
+/* line 95, ../scss/modules/_contact.scss */
 .contact-module-container .contacts-container .contacts .contact h3 {
   margin-bottom: 0;
   padding-bottom: 0;
 }
-/* line 95, ../scss/modules/_contact.scss */
+/* line 100, ../scss/modules/_contact.scss */
 .contact-module-container .contacts-container .contacts .contact h4 {
   margin-top: 0;
 }
-/* line 99, ../scss/modules/_contact.scss */
+/* line 104, ../scss/modules/_contact.scss */
 .contact-module-container .contacts-container .contacts .contact a {
   color: #FFFFFF;
   text-decoration: none;
 }
-/* line 103, ../scss/modules/_contact.scss */
+/* line 108, ../scss/modules/_contact.scss */
 .contact-module-container .contacts-container .contacts .contact a:hover {
   text-decoration: underline;
 }
-/* line 108, ../scss/modules/_contact.scss */
+/* line 113, ../scss/modules/_contact.scss */
 .contact-module-container .contacts-container .contacts .contact:last-child {
   padding-bottom: 40px;
 }
 @media (min-width: 768px) {
-  /* line 108, ../scss/modules/_contact.scss */
+  /* line 113, ../scss/modules/_contact.scss */
   .contact-module-container .contacts-container .contacts .contact:last-child {
     padding-bottom: 0;
   }
 }
-/* line 118, ../scss/modules/_contact.scss */
+/* line 123, ../scss/modules/_contact.scss */
 .contact-module-container .contacts-container .image-container {
   grid-area: img;
   line-height: 0;
 }
-@media (min-width: 768px) {
-  /* line 118, ../scss/modules/_contact.scss */
+@media (min-width: 1024px) {
+  /* line 123, ../scss/modules/_contact.scss */
   .contact-module-container .contacts-container .image-container {
     position: sticky;
     top: 0;
     align-self: end;
   }
 }
-/* line 130, ../scss/modules/_contact.scss */
+/* line 135, ../scss/modules/_contact.scss */
 .contact-module-container .contact-logo {
   width: calc((100vw - 80px) / 12);
 }
 
-/* line 135, ../scss/modules/_contact.scss */
+/* line 140, ../scss/modules/_contact.scss */
 .contact-open .contact-module-container {
   transform: translateX(0);
 }
 
-/* line 139, ../scss/modules/_contact.scss */
+/* line 144, ../scss/modules/_contact.scss */
 .home .contact-module-container {
   margin-top: 0;
 }
 @media (min-width: 768px) {
-  /* line 139, ../scss/modules/_contact.scss */
+  /* line 144, ../scss/modules/_contact.scss */
   .home .contact-module-container {
     margin-top: calc((100vh - 80px) *-1);
   }
@@ -2545,7 +2565,7 @@ a.button:hover svg {
 }
 
 @media (min-width: 768px) {
-  /* line 1, ../scss/modules/_map.scss */
+  /* line 3, ../scss/modules/_map.scss */
   .map {
     display: grid;
     margin: 0 40px;
@@ -2553,13 +2573,13 @@ a.button:hover svg {
   }
 }
 @media (min-width: 768px) {
-  /* line 1, ../scss/modules/_map.scss */
+  /* line 3, ../scss/modules/_map.scss */
   .map {
     margin: calc(100vw / 12) 40px 0 40px;
   }
 }
 @media (min-width: 768px) {
-  /* line 8, ../scss/modules/_map.scss */
+  /* line 10, ../scss/modules/_map.scss */
   .map .map-title {
     display: grid;
     grid-template-columns: 9fr 3fr;
@@ -2567,18 +2587,18 @@ a.button:hover svg {
   }
 }
 @media (min-width: 1024px) {
-  /* line 8, ../scss/modules/_map.scss */
+  /* line 10, ../scss/modules/_map.scss */
   .map .map-title {
     grid-template-columns: 8fr 4fr;
   }
 }
 @media (min-width: 1280px) {
-  /* line 8, ../scss/modules/_map.scss */
+  /* line 10, ../scss/modules/_map.scss */
   .map .map-title {
     grid-template-columns: 5fr 7fr;
   }
 }
-/* line 23, ../scss/modules/_map.scss */
+/* line 25, ../scss/modules/_map.scss */
 .map .map-title h2 {
   font-weight: normal;
   font-size: 30px;
@@ -2589,13 +2609,13 @@ a.button:hover svg {
   margin: 100px 20px 40px 20px;
 }
 @media (min-width: 768px) {
-  /* line 23, ../scss/modules/_map.scss */
+  /* line 25, ../scss/modules/_map.scss */
   .map .map-title h2 {
     margin: 100px 0px 40px 0px;
   }
 }
 @media (min-width: 1024px) {
-  /* line 23, ../scss/modules/_map.scss */
+  /* line 25, ../scss/modules/_map.scss */
   .map .map-title h2 {
     font-weight: normal;
     font-size: 50px;
@@ -2606,12 +2626,12 @@ a.button:hover svg {
     margin: 100px 20px 40px 20px;
   }
 }
-/* line 38, ../scss/modules/_map.scss */
+/* line 40, ../scss/modules/_map.scss */
 .map .map-container {
   background-color: #F3EADF;
 }
-@media (min-width: 768px) {
-  /* line 38, ../scss/modules/_map.scss */
+@media (min-width: 900px) {
+  /* line 40, ../scss/modules/_map.scss */
   .map .map-container {
     display: grid;
     grid-template-columns: 3fr 9fr;
@@ -2619,25 +2639,25 @@ a.button:hover svg {
   }
 }
 @media (min-width: 1440px) {
-  /* line 38, ../scss/modules/_map.scss */
+  /* line 40, ../scss/modules/_map.scss */
   .map .map-container {
     display: grid;
     grid-template-columns: 2fr 10fr;
     grid-template-areas: "navi maps";
   }
 }
-/* line 53, ../scss/modules/_map.scss */
+/* line 55, ../scss/modules/_map.scss */
 .map .map-container .map-layers-nav {
   grid-area: navi;
   padding: 20px;
 }
 @media (min-width: 768px) {
-  /* line 53, ../scss/modules/_map.scss */
+  /* line 55, ../scss/modules/_map.scss */
   .map .map-container .map-layers-nav {
     padding: 40px;
   }
 }
-/* line 61, ../scss/modules/_map.scss */
+/* line 63, ../scss/modules/_map.scss */
 .map .map-container .map-layers-nav h3 {
   font-weight: normal;
   font-size: 30px;
@@ -2649,66 +2669,66 @@ a.button:hover svg {
   margin-bottom: 20px;
 }
 @media (min-width: 768px) {
-  /* line 61, ../scss/modules/_map.scss */
+  /* line 63, ../scss/modules/_map.scss */
   .map .map-container .map-layers-nav h3 {
     margin-bottom: 40px;
   }
 }
-/* line 72, ../scss/modules/_map.scss */
+/* line 74, ../scss/modules/_map.scss */
 .map .map-container .maps {
   position: relative;
   grid-area: maps;
   overflow: scroll;
 }
 @media (min-width: 768px) {
-  /* line 72, ../scss/modules/_map.scss */
+  /* line 74, ../scss/modules/_map.scss */
   .map .map-container .maps {
     overflow: hidden;
   }
 }
-/* line 82, ../scss/modules/_map.scss */
+/* line 84, ../scss/modules/_map.scss */
 .map .map-container .maps #main-map {
   position: relative;
   top: 0;
   left: 0;
   z-index: 1;
 }
-/* line 89, ../scss/modules/_map.scss */
+/* line 91, ../scss/modules/_map.scss */
 .map .map-container .maps .map-layer {
   position: absolute;
   top: 0;
   left: 0;
   opacity: 0;
 }
-/* line 95, ../scss/modules/_map.scss */
+/* line 97, ../scss/modules/_map.scss */
 .map .map-container .maps .map-layer:nth-child(2) {
   z-index: 2;
 }
-/* line 99, ../scss/modules/_map.scss */
+/* line 101, ../scss/modules/_map.scss */
 .map .map-container .maps .map-layer:nth-child(3) {
   z-index: 3;
 }
-/* line 103, ../scss/modules/_map.scss */
+/* line 105, ../scss/modules/_map.scss */
 .map .map-container .maps .map-layer:nth-child(4) {
   z-index: 4;
 }
-/* line 107, ../scss/modules/_map.scss */
+/* line 109, ../scss/modules/_map.scss */
 .map .map-container .maps .map-layer.show {
   opacity: 1;
 }
-/* line 112, ../scss/modules/_map.scss */
+/* line 114, ../scss/modules/_map.scss */
 .map .map-container .maps img {
   height: calc(100vw * 1.5);
   width: auto;
 }
 @media (min-width: 768px) {
-  /* line 112, ../scss/modules/_map.scss */
+  /* line 114, ../scss/modules/_map.scss */
   .map .map-container .maps img {
     width: 100%;
     height: auto;
   }
 }
-/* line 123, ../scss/modules/_map.scss */
+/* line 125, ../scss/modules/_map.scss */
 .map .map-container .maps-scrollable-container {
   display: block;
   width: calc((100vw * 1.152) * 0.86);
@@ -2716,15 +2736,15 @@ a.button:hover svg {
   line-height: 0;
   max-height: 600px;
 }
-@media (min-width: 768px) {
-  /* line 123, ../scss/modules/_map.scss */
+@media (min-width: 900px) {
+  /* line 125, ../scss/modules/_map.scss */
   .map .map-container .maps-scrollable-container {
     width: auto;
     height: auto;
     max-height: none;
   }
 }
-/* line 139, ../scss/modules/_map.scss */
+/* line 141, ../scss/modules/_map.scss */
 .map .scroll-map-info {
   display: block;
   position: absolute;
@@ -2746,18 +2766,18 @@ a.button:hover svg {
   transition: opacity 0.3s ease 0s;
 }
 @media (min-width: 768px) {
-  /* line 139, ../scss/modules/_map.scss */
+  /* line 141, ../scss/modules/_map.scss */
   .map .scroll-map-info {
     display: none;
   }
 }
-/* line 159, ../scss/modules/_map.scss */
+/* line 161, ../scss/modules/_map.scss */
 .map .scroll-map-info svg {
   position: absolute;
   right: 35px;
   top: 14px;
 }
-/* line 166, ../scss/modules/_map.scss */
+/* line 168, ../scss/modules/_map.scss */
 .map .touched .scroll-map-info {
   opacity: 0;
 }
@@ -3855,26 +3875,24 @@ a.button:hover svg {
 @media (min-width: 768px) {
   /* line 1, ../scss/modules/_two_col_sticky.scss */
   .two-col-sticky {
-    display: grid;
-    margin: 0 40px;
-    column-gap: 20px;
+    margin: 100px 40px 0 40px;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
   /* line 1, ../scss/modules/_two_col_sticky.scss */
   .two-col-sticky {
-    margin: 0 40px 0 40px;
+    display: grid;
     padding-top: calc(100vw / 12);
     grid-template-columns: 5fr 1fr 6fr;
     grid-template-areas: "left . right";
   }
 }
-/* line 13, ../scss/modules/_two_col_sticky.scss */
+/* line 17, ../scss/modules/_two_col_sticky.scss */
 .two-col-sticky .left {
   position: relative;
   grid-area: left;
 }
-/* line 18, ../scss/modules/_two_col_sticky.scss */
+/* line 22, ../scss/modules/_two_col_sticky.scss */
 .two-col-sticky .left h2 {
   font-weight: normal;
   font-size: 30px;
@@ -3886,7 +3904,7 @@ a.button:hover svg {
   margin-top: 0;
 }
 @media (min-width: 768px) {
-  /* line 18, ../scss/modules/_two_col_sticky.scss */
+  /* line 22, ../scss/modules/_two_col_sticky.scss */
   .two-col-sticky .left h2 {
     font-weight: normal;
     font-size: 50px;
@@ -3896,25 +3914,25 @@ a.button:hover svg {
     font-family: "PPNeueMontreal-Regular";
   }
 }
-@media (min-width: 768px) {
-  /* line 29, ../scss/modules/_two_col_sticky.scss */
+@media (min-width: 1024px) {
+  /* line 33, ../scss/modules/_two_col_sticky.scss */
   .two-col-sticky .left .stick {
     position: sticky;
     top: 0;
     padding-top: calc(100vw / 12);
   }
 }
-/* line 39, ../scss/modules/_two_col_sticky.scss */
+/* line 43, ../scss/modules/_two_col_sticky.scss */
 .two-col-sticky .right {
   grid-area: right;
 }
 @media (min-width: 768px) {
-  /* line 39, ../scss/modules/_two_col_sticky.scss */
+  /* line 43, ../scss/modules/_two_col_sticky.scss */
   .two-col-sticky .right {
     padding-top: calc(100vw / 12);
   }
 }
-/* line 46, ../scss/modules/_two_col_sticky.scss */
+/* line 50, ../scss/modules/_two_col_sticky.scss */
 .two-col-sticky .right h3 {
   font-size: 20px;
   line-height: 1.3em;
@@ -3924,7 +3942,7 @@ a.button:hover svg {
   font-weight: bold;
   margin-top: 0;
 }
-/* line 52, ../scss/modules/_two_col_sticky.scss */
+/* line 56, ../scss/modules/_two_col_sticky.scss */
 .two-col-sticky .right p {
   font-size: 20px;
   line-height: 1.3em;
@@ -3932,21 +3950,21 @@ a.button:hover svg {
   padding-bottom: 0;
   font-family: "PPNeueMontreal-Regular";
 }
-/* line 57, ../scss/modules/_two_col_sticky.scss */
+/* line 61, ../scss/modules/_two_col_sticky.scss */
 .two-col-sticky .right .button-container {
   text-align: right;
 }
-/* line 60, ../scss/modules/_two_col_sticky.scss */
+/* line 64, ../scss/modules/_two_col_sticky.scss */
 .two-col-sticky .right .button-container .button {
   margin-right: 20px;
 }
 @media (min-width: 768px) {
-  /* line 60, ../scss/modules/_two_col_sticky.scss */
+  /* line 64, ../scss/modules/_two_col_sticky.scss */
   .two-col-sticky .right .button-container .button {
     margin-right: 0;
   }
 }
-/* line 69, ../scss/modules/_two_col_sticky.scss */
+/* line 73, ../scss/modules/_two_col_sticky.scss */
 .two-col-sticky .right article {
   display: flex;
   justify-content: flex-start;
@@ -3955,11 +3973,11 @@ a.button:hover svg {
   padding-top: 40px;
   border-bottom: 2px solid white;
 }
-/* line 77, ../scss/modules/_two_col_sticky.scss */
+/* line 81, ../scss/modules/_two_col_sticky.scss */
 .two-col-sticky .right article:first-of-type {
   border-top: 2px solid white;
 }
-/* line 81, ../scss/modules/_two_col_sticky.scss */
+/* line 85, ../scss/modules/_two_col_sticky.scss */
 .two-col-sticky .right article .number {
   min-width: 80px;
   padding-right: 20px;
@@ -3973,7 +3991,7 @@ a.button:hover svg {
   line-height: 1em;
 }
 @media (min-width: 768px) {
-  /* line 81, ../scss/modules/_two_col_sticky.scss */
+  /* line 85, ../scss/modules/_two_col_sticky.scss */
   .two-col-sticky .right article .number {
     padding-right: 40px;
     min-width: 100px;
@@ -3986,7 +4004,7 @@ a.button:hover svg {
     line-height: 1em;
   }
 }
-/* line 97, ../scss/modules/_two_col_sticky.scss */
+/* line 101, ../scss/modules/_two_col_sticky.scss */
 .two-col-sticky .right .button-container {
   margin-top: 40px;
 }
