--- a/public/wp-content/themes/blackrock/scss/modules/_error404.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_error404.scss
@@ -7,6 +7,16 @@
     justify-content: center;
     align-items: center;
 
+    background-size: 200% 100%;
+
+    @media (min-width: 600px) {
+        background-size: 150% 100%;
+    }
+
+    @media #{$mq-tablet-desk} {
+        background-size: 100% 100%;
+    }
+
     h2 {
         @include headline-30;
         text-align: center;
