--- a/public/wp-content/themes/blackrock/scss/modules/_floors.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_floors.scss
@@ -167,7 +167,8 @@
 				}
 
 				.content {
-					display: none;
+					display: grid;
+					height: 0;
 
 					@media #{$mq-tablet-desk} {
 						grid-template-columns: 4fr 7fr 1fr 10fr 2fr;
@@ -181,6 +182,13 @@
 						margin: 0;
 						padding: 0;
 						overflow: hidden;
+						transform: translateX(20px);
+						opacity: 0;
+						transition: all 0.3s ease 0.1s;
+
+						@media #{$mq-tablet-port} {
+							transform: translateX(40px);
+						}
 
 						li {
 							display: grid;
@@ -240,6 +248,13 @@
 						overflow: hidden;
 						grid-area: img;
 						padding-top: 40px;
+						transform: translateX(20px);
+						opacity: 0;
+						transition: all 0.3s ease 0.4s;
+
+						@media #{$mq-tablet-port} {
+							transform: translateX(40px);
+						}
 
 						@media #{$mq-tablet-desk} {
 							padding-top: 0;
@@ -261,8 +276,21 @@
 						z-index: 2;
 					}
 
+					.content .data {
+						opacity: 1;
+						transform: translateX(0);
+						transition: all 0.3s ease 0.1s;
+					}
+
+					.content .image {
+						opacity: 1;
+						transform: translateX(0);
+						transition: all 0.3s ease 0.4s;
+					}
+
 					.content {
 						display: block;
+						height: auto;
 						padding: 40px 20px 20px 20px;
 
 						@media #{$mq-tablet-desk} {
